--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@ngx-translate/core": "^10.0.2",
     "@ngx-translate/http-loader": "^3.0.1",
     "core-js": "^2.5.4",
+    "html2canvas": "^1.0.0-alpha.12",
     "ionicons": "^4.4.6",
+    "jspdf": "^1.4.1",
     "rxjs": "^6.3.3",
     "zone.js": "^0.8.26"
   },
