--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "html2canvas": "^1.0.0-alpha.12",
     "ionicons": "^4.4.6",
     "jspdf": "^1.4.1",
+    "ngx-clipboard": "^11.1.9",
     "rxjs": "^6.3.3",
     "zone.js": "^0.8.26"
   },
