--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "core-js": "^2.5.4",
     "i": "^0.3.6",
     "ionicons": "^4.4.6",
+    "ng-simple-slideshow": "^1.2.9",
     "npm": "^6.8.0",
     "rxjs": "^6.3.3",
     "zone.js": "^0.8.26"
