--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.7.2",
     "@ngx-translate/core": "^10.0.2",
     "@ngx-translate/http-loader": "^3.0.1",
+    "classlist.js": "^1.1.20150312",
     "core-js": "^2.5.4",
     "i": "^0.3.6",
     "ionicons": "^4.4.6",
