--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "@fortawesome/free-solid-svg-icons": "^5.7.2",
     "@ngx-translate/core": "^10.0.2",
     "@ngx-translate/http-loader": "^3.0.1",
+    "classlist.js": "^1.1.20150312",
     "core-js": "^2.5.4",
     "i": "^0.3.6",
     "ionicons": "^4.4.6",
     "ng-simple-slideshow": "^1.2.9",
     "npm": "^6.8.0",
     "rxjs": "^6.3.3",
+    "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
