--- a/package.json
+++ b/package.json
@@ -33,20 +33,20 @@
     "i": "^0.3.6",
     "ionicons": "^4.4.6",
     "ng-simple-slideshow": "^1.2.9",
-    "npm": "^6.8.0",
+    "npm": "^6.14.5",
     "rxjs": "^6.3.3",
     "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.6.6",
+    "@angular-devkit/build-angular": "^0.13.4",
     "@angular/cli": "^6.2.6",
     "@angular/compiler-cli": "^6.1.10",
     "@angular/language-service": "^6.1.10",
     "@types/jasmine": "^2.8.9",
     "@types/jasminewd2": "^2.0.5",
     "@types/node": "~8.9.4",
-    "angular-cli-ghpages": "^0.5.3",
+    "angular-cli-ghpages": "^0.6.2",
     "codelyzer": "~4.2.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
